--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -44,6 +44,11 @@
       <ion-icon name="create"></ion-icon>
     </ion-fab-button>
   </ion-fab> -->
+  <ion-fab *ngIf="hero.getUser().admin === 1" vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button color="dark" routerLink="/homeadmin">
+      <ion-icon name="pulse"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="danger">
       <ion-icon name="add" color="dark"></ion-icon>
