--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -42,31 +42,25 @@
           <ion-row>
             <ion-col size="12" size-lg="12" size-md="12" size-xl="12">
               <ion-text color="light">
-                <h3 class="ion-text-center textCss">Details Procedure</h3>
-              </ion-text>
-            </ion-col>
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3" class="grid-border">
-              <ion-text color="light">
-                <p class="head txtdescription">Procedure</p>
-              </ion-text>
-            </ion-col>
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3" class="grid-border">
-              <ion-text color="light">
-                <p class="head txtdescription">Description</p>
+                <h5 class="ion-text-center"color="light"> Procedure Selected </h5>
               </ion-text>
             </ion-col>
           </ion-row>
           <ion-row *ngFor="let item of hero.dataPurchase.procedures">
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
-              <ion-text color="light">
-                <p class="txtdescription">{{item.nombre}}</p>
-              </ion-text>
+            <ion-col size="12" size-lg="12" size-md="12" size-xl="12">
+              <ion-item (click)="planAc = !planAc ">
+                  <img slot="start" src="./../../../assets/icon/surgeryIco.svg">
+                  <ion-title size="undefined">{{item.nombre}}</ion-title>
+                  <ion-icon slot="end" name="arrow-dropup" *ngIf="planAc"> </ion-icon>
+                <ion-icon slot="end" name="arrow-dropdown" *ngIf="!planAc"></ion-icon>
+                </ion-item> 
+           
+            <ion-col class="nopadding" size="12" size-lg="12" size-md="12" size-xl="12">
+              <ion-item *ngIf="planAc"> 
+                <h2 class="txtdescription">{{item.descripcion}}</h2>
+              </ion-item>
             </ion-col>
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
-              <ion-text color="light">
-                <p class="txtdescription">{{item.descripcion}}</p>
-              </ion-text>
-            </ion-col>
+          </ion-col>
           </ion-row>
         </ion-grid>
         <ion-grid fixed *ngIf="hero.dataPurchase.room !== null">
