--- a/beauty-app/src/app/pages/contact/contact.page.html
+++ b/beauty-app/src/app/pages/contact/contact.page.html
@@ -32,7 +32,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="12" >
-        <ion-button type='submit' class='button-contact' routerLink="/homeadmin">
+        <ion-button type='submit' class='button-contact' routerLink="/trips">
           Send Message
         </ion-button>
         </ion-col>
